# doxxer

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  dist-workspace.toml  doxxer.toml  justfile
.github/: FUNDING.yml
docs/: ADVANCED_CONFIGURATION.md  demo.tape
src/: cli.rs  config.rs  git.rs  main.rs  models.rs  settings.rs  template.rs  version.rs
tests/: cli_current.rs  cli_next.rs  common.rs
