[package]
name = "doxxer"
authors = ["Karlis Vagalis <karlis.vagalis@gmail.com>"]
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CLI tool for dynamic SemVer versioning using Git and tags"
readme = "README.md"
repository = "https://github.com/karlis-vagalis/doxxer"
keywords = ["semver", "git", "versioning", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
config = "0.15.11"
git2 = { version = "0.20.2", default-features = false }
regex = "1.11.1"
semver = "1.0.26"

[profile.release]
lto = true
