[package]
name = "doxxer"
authors = ["Karlis Vagalis <karlis.vagalis@gmail.com>"]
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CLI tool for dynamic SemVer versioning using Git and tags"
readme = "README.md"
repository = "https://github.com/karlis-vagalis/doxxer"
keywords = ["semver", "git", "versioning", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
config = "0.15.11"
git2 = { version = "0.20.2", default-features = false }
once_cell = "1.21.3"
regex = "1.11.1"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
